# Moving-to-Poetry

./: .coverage  .gitignore  README.md  pyproject.toml
.github/workflows/: black.yml  lint.yml  test.yml
src/kattis/: abc.py  atmmachine.py  cocktail.py  floor.py  lovable.py  prize.py  puzzle.py  rank.py  real.py  twoques.py
tests/: test_abc.py  test_atm.py  test_cocktail.py  test_floor.py  test_lovable.py  test_prize.py  test_puzzle.py  test_que.py  test_rank.py  test_real.py  test_sample.py
