[project]
name = "kattis"
version = "0.1.0"
description = ""
authors = [
    {name = "kemermohammed",email = "kemmah5833@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "kattis", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
