[project]
name = "kattis"
version = "0.1.0"
description = "Collection of Kattis problem solutions converted to functions"
authors = [
    {name = "kemermohammed",email = "kemmah5833@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "kattis", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "coverage (>=7.11.3,<8.0.0)",
    "pylint (>=4.0.3,<5.0.0)"
]
